@@ -432,6 +432,8 @@ Q:dcc-*:dcc bots not allowed on this server
 Q:lamestbot:You have to be kidding me
 Q:crush:In memory of Janet Pippin
 Q:cwush:In memory of Janet Pippin
+Q:callas:Only allowed from this host:callas@oper.irc.arpa.com
+
 #
 # if JUPE_CHANNEL is defined you can also jupe a channel locally
 # i.e. no one on your server can join this channel.
